# flatter

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml
apps/: CMakeLists.txt  flatter.cpp
cmake/: FindFPLLL.cmake  FindGMP.cmake
docs/: example_profiles.md
include/flatter/: computation_context.h  flatter.h  monitor.h  problems.h  workspace_buffer.h
include/flatter/data/: lattice.h  matrix.h
include/flatter/problems/: fused_qr_size_reduction.h  lattice_reduction.h  (+5 more)
scripts/: rsahighbits.sage  visualize_profile.py
src/: CMakeLists.txt  computation_context.cpp  flatter.cpp  monitor.cpp  profile.cpp
src/data/: CMakeLists.txt
src/data/lattice/: CMakeLists.txt  lattice.cpp
src/data/matrix/: CMakeLists.txt  matrix.cpp  matrix_data.cpp  matrix_data_double.cpp  matrix_data_int64.cpp  matrix_data_mpfr.cpp  matrix_data_mpz.cpp  workspace_buffer.cpp
src/math/: CMakeLists.txt  matrix_tools.cpp  matrix_tools.h  mpfr_blas.cpp  mpfr_blas.h  mpfr_lapack.cpp  mpfr_lapack.h
src/problems/: CMakeLists.txt  problem.cpp
src/problems/fused_qr_sizered/: CMakeLists.txt  base.cpp  columnwise.cpp  columnwise.h  columnwise_double.cpp  columnwise_double.h  fused_qr_size_reduction.cpp  iterated.cpp  iterated.h  lazy_refine.cpp  lazy_refine.h  params.cpp  seysen_refine.cpp  seysen_refine.h
src/problems/lattice_reduction/: CMakeLists.txt  base.cpp  fplll_impl.cpp  fplll_impl.h  goal.cpp  heuristic_1.cpp  heuristic_1.h  heuristic_2.cpp  heuristic_2.h  heuristic_3.cpp  heuristic_3.h  irregular.cpp  irregular.h  lagrange.cpp  lagrange.h  latred_relative_sr.cpp  latred_relative_sr.h  lattice_reduction.cpp  params.cpp  proved_1.cpp  proved_1.h  proved_2.cpp  proved_2.h  proved_3.cpp  proved_3.h  recursive_generic.cpp  recursive_generic.h  schoenhage.cpp  schoenhage.h  sublattice_split.cpp  sublattice_split_2.cpp  sublattice_split_2.h  sublattice_split_3.cpp  sublattice_split_3.h  threaded_3.cpp  threaded_3.h
src/problems/matrix_multiplication/: CMakeLists.txt  aliased.cpp  aliased.h  base.cpp  elementary_RRZ.cpp  elementary_RRZ.h  elementary_RRl.cpp  elementary_RRl.h  elementary_ZZl.cpp  elementary_ZZl.h  elementary_mpfr.cpp  elementary_mpfr.h  elementary_mpz.cpp  elementary_mpz.h  elementary_native.cpp  elementary_native.h  matrix_multiplication.cpp  strassen.cpp  strassen.h  threaded.cpp  threaded.h  tri_matmul.cpp  tri_matmul.h
src/problems/qr_factorization/: CMakeLists.txt  base.cpp  blocked.cpp  blocked.h  eigen_impl.cpp  eigen_impl.h  householder_mpfr.cpp  householder_mpfr.h  qr_factorization.cpp  threaded.cpp  threaded.h
src/problems/relative_size_reduction/: CMakeLists.txt  base.cpp  generic.cpp  generic.h  orthogonal.cpp  orthogonal.h  orthogonal_double.cpp  orthogonal_double.h  params.cpp  relative_size_reduction.cpp  triangular.cpp  triangular.h
src/problems/size_reduction/: CMakeLists.txt  base.cpp  blocked.cpp  blocked.h  elementary_ZZ.cpp  elementary_ZZ.h  elementary_ll.cpp  elementary_ll.h  size_reduction.cpp
(+15 files in other folders)
